# microservice-example

./: Cargo.toml  Dockerfile-auth  Dockerfile-health  README.md  docker-compose.yaml
src/auth-service/: auth.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
