[package]
name = "microservice-example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
tonic = "0.13.1"
prost = "0.14.1"
tokio = { version = "1.39.0", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.13.0", features = ["v4"] }
pbkdf2 = { version = "0.12.0", features = ["simple"] }
rand_core = { version = "0.9.3", features = ["std"] }
clap = { version = "4.2", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.1"
